Rename device.serial.ParityBit.NO to avoid a clash with NO in objective C.

BUG=682516

Review-Url: https://codereview.chromium.org/2644543003
Cr-Commit-Position: refs/heads/master@{#444663}

Former-commit-id: fe5b80deb66d94a110ef347739f3f7e8d7d164c5